--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -10,6 +10,6 @@
 Title :<span th:text="${message.title}"></span><br />
 Content :<span th:text="${message.content}"></span><br />
 Post By :<span th:text="${message.postBy}"></span><br />
-<a th:href="@{/delete/{id}(id=${message.id})}">Delete this message</a>
+<!-- <a th:href="@{/delete/{id}(id=${message.id})}">Delete this message</a> -->
 </body>
 </html>
